--- a/cinema.css
+++ b/cinema.css
@@ -80,3 +80,21 @@ body {
 .footer {
   height: 400px;
 }
+@media (max-width: 600px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .img {
+    margin-bottom: 15px;
+  }
+  .header {
+    overflow: auto;
+    justify-content: flex-start;
+    min-width: 100%;
+  }
+  .header__links {
+    padding: 10px;
+    min-width: 100px;
+  }
+}
