--- a/cinema.css
+++ b/cinema.css
@@ -82,7 +82,7 @@ body {
 }
 @media (max-width: 600px) {
   .container {
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
   }
   .img {
