--- a/cinema.css
+++ b/cinema.css
@@ -20,6 +20,7 @@ body {
   font-size: 25px;
   font-family: "Fira Sans Condensed", sans-serif;
   color: white;
+  text-decoration: none;
 }
 .content__cards {
   padding: 25px;
@@ -79,21 +80,11 @@ body {
 .footer {
   height: 400px;
 }
-@media (max-width: 600px) {
-  .container {
-    /* flex-direction: column; */
-    align-items: center;
-  }
-  .img {
-    margin-bottom: 15px;
-  }
-  .header {
-    overflow: auto;
-    justify-content: flex-start;
-    min-width: 100%;
-  }
-  .header__links {
-    padding: 10px;
-    min-width: 100px;
-  }
+.title {
+  color: white;
+  display: flex;
+  justify-content: center;
+  margin-top: 150px;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 60px;
 }
